# torch-dataloader-utils

./: .gitignore  404.html  Dev.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: README.md  _common.py  gen_data.py  report.py  run.py
benchmarks/baselines/: manual_sharded.py  naive_iterable.py
benchmarks/results/: results.md
benchmarks/scenarios/: __init__.py  s1_throughput.py  s2_unequal.py  s3_single_large.py  s4_rank_sharding.py  s5_column_projection.py  s6_predicate_pushdown.py  s7_startup_latency.py  s8_format_comparison.py
docs/: benchmarks.md  checkpoint.md  distributed.md  iceberg.md  index.md  limitations.md  observability.md  roadmap.md  splits.md  structured.md  training.md
e2e/: gen_data.py  run_iceberg.py  run_orc.py  run_pipeline.py
iceberg/: index.html
limitations/: index.html
roadmap/: index.html
search/: search_index.json
specs/: benchmarks.md  checkpoint.md  dataset-layer.md  dev-plan.md  filesystem-layer.md  format-layer.md  iceberg-layer.md  integration-cloud-backends.md  integration-local.md  integration-s3.md  observability.md  orc-sub-file-splitting.md  rank-aware-sharding.md  shuffle_buffer.md  split-generation.md
splits/: index.html
src/torch_dataloader_utils/: __init__.py  observability.py  split.py
src/torch_dataloader_utils/dataset/: __init__.py  base.py  iceberg.py  output.py  structured.py
src/torch_dataloader_utils/filesystem/: __init__.py  discovery.py
src/torch_dataloader_utils/format/: __init__.py  reader.py
src/torch_dataloader_utils/splits/: __init__.py  balanced.py  core.py  iceberg.py  round_robin.py  target_size.py
structured/: index.html
tests/: __init__.py  conftest.py
tests/fixtures/: generate.py  sample.csv  sample.jsonl  sample.orc  sample.parquet
tests/integration/: test_azure.py  test_gcs.py  test_iceberg.py  test_local.py  test_s3.py  test_s3_parquet.py
tests/unit/: test_checkpoint.py  test_observability.py  test_shuffle_buffer.py  test_split.py
tests/unit/dataset/: test_iceberg.py  test_output.py  test_structured.py
tests/unit/filesystem/: test_discovery.py
tests/unit/format/: test_reader.py
training/: index.html
(+5 files in other folders)
