[project]
name = "torch-dataloader-utils"
version = "0.1.0"
description = "Lightweight PyTorch DataLoader for structured data on cloud object storage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["pytorch", "dataloader", "parquet", "iceberg", "s3", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "pyarrow>=15.0",
    "fsspec>=2024.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
s3      = ["s3fs>=2024.2"]
gcs     = ["gcsfs>=2024.2"]
azure   = ["adlfs>=2024.2"]
iceberg = ["pyiceberg>=0.6"]
all     = ["s3fs>=2024.2", "gcsfs>=2024.2", "adlfs>=2024.2", "pyiceberg>=0.6"]
dev     = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "moto[s3]>=5.0",
    "pyiceberg>=0.6",
    "tqdm>=4.0",
]

[project.urls]
Homepage   = "https://github.com/srpraneeth/torch-dataloader-utils"
Repository = "https://github.com/srpraneeth/torch-dataloader-utils"
Issues     = "https://github.com/srpraneeth/torch-dataloader-utils/issues"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torch_dataloader_utils"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]   # pycodestyle, pyflakes, isort, pyupgrade
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]              # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--cov=torch_dataloader_utils --cov-report=term-missing"
markers   = [
    "integration: marks tests as integration tests (deselected by default)",
]

[tool.coverage.run]
source = ["src/torch_dataloader_utils"]
omit   = ["tests/*"]

[dependency-groups]
dev = [
    "s3fs>=2026.3.0",
    "sqlalchemy>=2.0.49",
]
